--- a/sass/components/_index-clients.scss
+++ b/sass/components/_index-clients.scss
@@ -5,52 +5,19 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    
     margin-top: 50px;
-    
     & li {
-        display: inline-block;
-     
-
+        width: 46.66%;
         margin-bottom: 30px;
     }
-    
     & li:nth-last-of-type(-n+2) {
         margin-bottom: 0px;
     }
 }
 
-// .client {
-//     display: flex;
-//     justify-content: center;
-//     margin-top: 50px;
-//     & li {
-//         margin: 0px;
-//         @media screen and (min-width: 480px) and (max-width: 768px) {
-//             margin-bottom: 30px;
-//             &:nth-child(n+5) {
-//                 margin-bottom: 0;
-//             }
-//         }
-//     }
-//     & li:not(:last-child) {
-//         margin-right: 30px;
-//         @media screen and (min-width: 480px) and (max-width: 768px) {
-//             margin-right: 0;
-//         }
-//     }
-//     @media screen and (min-width: 480px) and (max-width: 768px) {
-//         justify-content: space-between;
-//         flex-wrap: wrap;
-//     }
-// }
-
 .client__card {
     display: block;
     width: 100%;
- 
-
-
     border: 1px solid $inactive-pict-color;
     border-radius: 4px;
     transition: border-color $cubic-standard;
@@ -59,33 +26,17 @@
         cursor: pointer;
     }
 }
-// .client__card {
-//     display: block;
-//     border: 1px solid $inactive-pict-color;
-//     border-radius: 4px;
-//     width: 170px;
-//     transition: border-color $cubic-standard;
-//     &:hover, &:focus {
-//         border-color: $active-color;
-//         cursor: pointer;
-//     }
-//     @media screen and (min-width: 480px) and (max-width: 768px) {
-//         width: 210px;
-//         display: flex;
-//         justify-content: center;
-//     }
-// }
 
 .client__pict {
-    display: inline-block;
-
+    display: block;
     fill: $inactive-pict-color;
     width: 106px;
     height: 60px;
-
-    margin: 16px 52px;
-
-  
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    
     transition: fill $cubic-standard;
     .client__card:hover & {
         fill: $active-color;
