--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,8 @@ ul {
     display: block;
     max-width: 450px;
 
-    
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 }
