--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,8 +1,10 @@
 .selection {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
     & li {
         margin-right: 8px;
+        margin-bottom: 15px;
     }
     & li:nth-child(5) {
         margin-right: 0px;
@@ -29,10 +31,10 @@
     }
 }
 
+
 .projects {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 50px;
+    display: block;
+
     margin-bottom: -30px;
 }
 
@@ -46,13 +48,9 @@
 
 .projects__card {
     display: block;
-    width: 370px;
+    width: 100%;
     background-color: $main-color;
-    margin-right: 30px;
     margin-bottom: 30px;
-    &:nth-child(3n) {
-        margin-right: 0;
-    }
 }
 
 .projects__container {
@@ -90,8 +88,8 @@
     padding-top: 63px;
     @include font-set ($font-size: 18px, $line-height: 28px, $text-align: left);    
     background: rgba(33, 150, 243, 0.9);
-    width: 370px;
-    height: 293px;
+    // width: 100%;
+    // height: 293px;
     margin-top: -1px;
     transform: translateY(100%);
     transition: transform $cubic-standard;
