--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,8 @@ ul {
 
 .container {
     display: block;
-    max-width: 450px;
+    width: 100%;
+    max-width: 480px;
 
     padding-left: 15px;
     padding-right: 15px;
