--- a/sass/components/_index-qualities.scss
+++ b/sass/components/_index-qualities.scss
@@ -35,6 +35,7 @@
 
 .qualities__card {
     display: block;
+    width: 100%;
     max-width: 450px;
     height: 120px;
     background-color: $secondary-background-color;
