--- a/css/main.css
+++ b/css/main.css
@@ -1343,7 +1343,8 @@ footer {
   bottom: 0;
   padding-left: 24px;
   padding-right: 24px;
-  padding-top: 63px;
+  padding-top: 77px;
+  padding-bottom: 77px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
