--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -83,7 +83,9 @@
     bottom: 0;
     padding-left: 24px;
     padding-right: 24px;
-    padding-top: 63px;
+    padding-top: 77px;
+    padding-bottom: 77px;
+
     @include font-set ($font-size: 18px, $line-height: 28px, $text-align: left);    
     background: rgba(33, 150, 243, 0.9);
     margin-top: -1px;
