--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,7 @@ header {
 }
 
 .header__container {
+  position: relative;
   display: block;
   max-width: 480px;
   padding-top: 10px;
@@ -75,11 +76,49 @@ header {
           align-items: center;
 }
 
-.navigation__menu--mobile {
+.navigation__menu--icon {
   width: 40px;
   height: 40px;
   fill: #212121;
-  margin-right: 0;
+}
+
+.navigation__menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.navigation__menu-button .navigation__menu--close {
+  display: none;
+}
+
+.navigation__menu-button.is-open .navigation__menu--close {
+  display: block;
+}
+
+.navigation__menu-button.is-open .navigation__menu--open {
+  display: none;
+}
+
+.navigation__menu--mobile {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 500px;
+  background-color: palegoldenrod;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.navigation__menu--mobile.is-open {
+  display: block;
 }
 
 .navigation__list {
