--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -3,6 +3,8 @@ header {
 }
 
 .header__container {
+    position: relative;
+
     display: block;
     max-width: 480px;
     
@@ -22,16 +24,54 @@ header {
 // }
 
 .navigation {
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.navigation__menu--mobile {
+.navigation__menu--icon {
     width: 40px;
     height: 40px;
     fill: $main-text-color;
-    margin-right: 0;
+}
+
+.navigation__menu-button {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+}
+
+.navigation__menu-button .navigation__menu--close {
+    display: none;
+}
+
+.navigation__menu-button.is-open .navigation__menu--close {
+    display: block;
+}
+
+.navigation__menu-button.is-open .navigation__menu--open {
+    display: none;
+}
+
+.navigation__menu--mobile {
+    display: none;
+
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 500px;
+
+    background-color: palegoldenrod;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    &.is-open {
+        display: block;
+    }
 }
 
 
@@ -101,18 +141,6 @@ header {
         margin-bottom: -1px;
     }
 }
-
-
-// .navigation__menu--mobile {
-//     display: none;
-//     @media screen and (min-width: 480px) and (max-width: 768px) {
-//         display: inline-block;
-//         fill: black;
-//         width: 40px;
-//         height: 40px;
-//     }
-// }
-
 
 .contacts {
     display: none;
