--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,6 +6,10 @@
 .logo {
     @extend %logo-default;
     color: $contrast-color;
+    .is-open & {
+        display: none;
+    }
+    
 }
 
 .logo__studio {
