--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -56,30 +56,28 @@ header {
     display: none;
 }
 
+
+
+
+
 .navigation__menu--mobile {
     display: none;
-
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
-    height: 500px;
-
+    height: 100vh;
     background-color: palegoldenrod;
     padding: 20px;
     text-align: center;
     font-size: 20px;
     &.is-open {
         display: block;
+        & .logo {
+            display: none;
+        }
     }
 }
-
-
-
-
-
-
-
 
 
 .navigation__list {
