--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,3 +38,7 @@ ul {
 .section-header {
     @include font-set ($font-size: 28px, $font-weight: 700, $line-height: 33px, $color: $main-text-color);
 }
+
+.navigation__menu--mobile.is-open .logo {
+    display: none;
+}
