--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@ ul {
   color: #2196F3;
 }
 
+.logo__menu {
+  display: none;
+}
+
 header {
   border-bottom: 1px solid #ECECEC;
 }
@@ -90,6 +94,7 @@ header {
   padding: 0;
   border: none;
   background-color: transparent;
+  z-index: 999;
 }
 
 .navigation__menu-button .navigation__menu--close {
@@ -107,7 +112,7 @@ header {
 .navigation__menu--mobile {
   display: none;
   position: absolute;
-  top: 100%;
+  top: 0%;
   left: 0;
   width: 100%;
   height: 100vh;
@@ -115,6 +120,7 @@ header {
   padding: 20px;
   text-align: center;
   font-size: 20px;
+  z-index: 1;
 }
 
 .navigation__menu--mobile.is-open {
@@ -122,7 +128,7 @@ header {
 }
 
 .navigation__list {
-  display: none;
+  display: inline-block;
 }
 
 .navigation__list > li {
@@ -179,7 +185,13 @@ header {
 }
 
 .contacts {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.contacts li:last-child {
+  margin-left: 30px;
 }
 
 .contacts__icon {
@@ -1426,9 +1438,5 @@ footer {
   letter-spacing: 0.03em;
   color: #212121;
   text-transform: none;
-}
-
-.navigation__menu-button.is-open .logo {
-  display: none;
 }
 /*# sourceMappingURL=main.css.map */
