--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -42,11 +42,14 @@ header {
     padding: 0;
     border: none;
     background-color: transparent;
+
+    z-index: 999;
 }
 
 .navigation__menu-button .navigation__menu--close {
     display: none;
 }
+
 
 .navigation__menu-button.is-open .navigation__menu--close {
     display: block;
@@ -56,15 +59,10 @@ header {
     display: none;
 }
 
-
-
-
-
-
 .navigation__menu--mobile {
     display: none;
     position: absolute;
-    top: 100%;
+    top: 0%;
     left: 0;
     width: 100%;
     height: 100vh;
@@ -72,6 +70,7 @@ header {
     padding: 20px;
     text-align: center;
     font-size: 20px;
+    z-index: 1;
     &.is-open {
         display: block;
     }
@@ -79,7 +78,7 @@ header {
 
 
 .navigation__list {
-    display: none;
+    display: inline-block;
     & > li {
         display: inline-block;
     }
@@ -138,18 +137,14 @@ header {
     }
 }
 
+
+
 .contacts {
-    display: none;
+    display: flex;
+    & li:last-child {
+        margin-left: 30px;
+    }
 }
-// .contacts {
-//     display: flex;
-//     & li:last-child {
-//         margin-left: 30px;
-//     }
-//     @media screen and (min-width: 480px) and (max-width: 768px) {
-//         display: none;
-//     }
-// }
 
 .contacts__icon {
     fill: $secondary-text-color;
