--- a/css/main.css
+++ b/css/main.css
@@ -117,9 +117,6 @@ header {
   width: 100%;
   height: 100vh;
   background-color: palegoldenrod;
-  padding: 20px;
-  text-align: center;
-  font-size: 20px;
   z-index: 1;
 }
 
@@ -128,70 +125,51 @@ header {
 }
 
 .navigation__list {
-  display: inline-block;
-}
-
-.navigation__list > li {
-  display: inline-block;
+  display: block;
+  margin-top: 48px;
+  margin-left: 40px;
+  margin-bottom: 302px;
 }
 
 .navigation__list > li:not(:last-child) {
-  margin-right: 50px;
+  margin-bottom: 32px;
 }
 
-.navigation__link--inactive, .navigation__link--active {
-  display: inline-block;
-  position: relative;
-  text-decoration: none;
+.navigation__list a:hover {
+  color: #2196F3;
+}
+
+.navigation__link--inactive,
+.navigation__link--active {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
+  font-size: 40px;
+  line-height: 47px;
+  text-align: left;
   letter-spacing: 0.02em;
   color: #212121;
   text-transform: none;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.navigation__link--inactive {
   text-decoration: none;
   color: #212121;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation__link--inactive:hover, .navigation__link--inactive:focus {
+.navigation__link--inactive:hover, .navigation__link--inactive:focus,
+.navigation__link--active:hover,
+.navigation__link--active:focus {
   color: #2196F3;
-}
-
-.navigation__link--active {
-  color: #2196F3;
-}
-
-.navigation__link--active::after {
-  display: block;
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  background-color: #2196F3;
-  left: 0;
-  bottom: 0;
-  border-radius: 2px;
-  margin-bottom: -1px;
 }
 
 .contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
+  margin-left: 40px;
+  margin-bottom: 64px;
 }
 
-.contacts li:last-child {
-  margin-left: 30px;
+.contacts > li:first-child {
+  margin-bottom: 32px;
 }
 
 .contacts__icon {
