--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -67,9 +67,6 @@ header {
     width: 100%;
     height: 100vh;
     background-color: palegoldenrod;
-    padding: 20px;
-    text-align: center;
-    font-size: 20px;
     z-index: 1;
     &.is-open {
         display: block;
@@ -78,14 +75,25 @@ header {
 
 
 .navigation__list {
-    display: inline-block;
-    & > li {
-        display: inline-block;
-    }
+    display: block;
+    margin-top: 48px;
+    margin-left: 40px;
+    margin-bottom: 302px;
+
     & > li:not(:last-child) {
-        margin-right: 50px;
+        margin-bottom: 32px;
     }
+    & a:hover {
+        color: $active-color;
+    }
+    // & > li {
+    //     display: block;
+    // }
+    // & > li:not(:last-child) {
+    //     margin-right: 50px;
+    // }
 }
+
 // .navigation__list {
 //     display: inline-block;
 //     & > li {
@@ -103,16 +111,19 @@ header {
 
 
 
-.navigation__link--inactive, .navigation__link--active  {
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    @include font-set ($font-weight: 500, $letter-spacing: 0.02em, $color: $main-text-color);
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
+// .navigation__link--inactive, .navigation__link--active  {
+//     display: inline-block;
+//     position: relative;
+//     text-decoration: none;
+//     @include font-set ($font-weight: 500, $letter-spacing: 0.02em, $color: $main-text-color);
+//     padding-top: 32px;
+//     padding-bottom: 32px;
+// }
 
-.navigation__link--inactive {
+.navigation__link--inactive,
+.navigation__link--active {
+    @include font-set ($font-weight: 500, $font-size: 40px, $line-height: 47px, $text-align: left, $letter-spacing: 0.02em, $color: $main-text-color);
+
     text-decoration: none;
     color:$main-text-color;
     transition: color $cubic-standard;    
@@ -121,29 +132,35 @@ header {
     }
 }
 
-.navigation__link--active {
-    color:$active-color;
-    &::after {
-        display: block;
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 4px;
-        background-color:$active-color;
-        left: 0;
-        bottom: 0;
-        border-radius: 2px;
-        margin-bottom: -1px;
-    }
-}
+// .navigation__link--active {
+
+    // color:$active-color;
+    // &::after {
+    //     display: block;
+    //     content: "";
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 4px;
+    //     background-color:$active-color;
+    //     left: 0;
+    //     bottom: 0;
+    //     border-radius: 2px;
+    //     margin-bottom: -1px;
+    // }
+// }
 
 
 
 .contacts {
-    display: flex;
-    & li:last-child {
-        margin-left: 30px;
+    display: block;
+    margin-left: 40px;
+    margin-bottom: 64px;
+    & > li:first-child {
+        margin-bottom: 32px;
     }
+    // & li:last-child {
+    //     margin-left: 30px;
+    // }
 }
 
 .contacts__icon {
