--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ header {
   display: block;
   margin-top: 48px;
   margin-left: 40px;
-  margin-bottom: 302px;
+  margin-bottom: 38vh;
 }
 
 .navigation__list > li:not(:last-child) {
