--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -78,7 +78,7 @@ header {
     display: block;
     margin-top: 48px;
     margin-left: 40px;
-    margin-bottom: 302px;
+    margin-bottom: 38vh;
 
     & > li:not(:last-child) {
         margin-bottom: 32px;
