--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-ul, li, h1, h2, h3, h4, p, img {
+ul, li, h1, h2, h3, h4, p, img, td, table, tr {
     padding: 0;
     margin: 0;
     border: 0;
@@ -38,3 +38,4 @@ ul {
 .section-header {
     @include font-set ($font-size: 28px, $font-weight: 700, $line-height: 33px, $color: $main-text-color);
 }
+
