--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,10 @@ header {
   fill: #212121;
 }
 
+.navigation__menu--icon:hover {
+  fill: #2196F3;
+}
+
 .navigation__menu-button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -129,6 +133,8 @@ header {
   margin-top: 48px;
   margin-left: 40px;
   margin-bottom: 25vh;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation__list > li:not(:last-child) {
@@ -678,8 +684,7 @@ footer {
   display: block;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  margin: 93px 15px;
   top: 50%;
   left: 50%;
   background-color: #FFFFFF;
@@ -749,7 +754,6 @@ footer {
 
 .form {
   display: inline-block;
-  width: 448px;
   margin-left: 39px;
   margin-right: 41px;
   margin-top: 41px;
