--- a/css/main.css
+++ b/css/main.css
@@ -665,6 +665,7 @@ footer {
 .backdrop {
   width: 100%;
   height: 100%;
+  padding: 93px 15px;
   position: fixed;
   top: 0;
   left: 0;
@@ -684,7 +685,6 @@ footer {
   display: block;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  margin: 93px 15px;
   top: 50%;
   left: 50%;
   background-color: #FFFFFF;
@@ -753,10 +753,10 @@ footer {
 }
 
 .form {
-  display: inline-block;
-  margin-left: 39px;
-  margin-right: 41px;
-  margin-top: 41px;
+  display: block;
+  margin-top: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .form__heading {
