--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -59,6 +59,7 @@
 .backdrop {
     width: 100%;
     height: 100%;
+    padding: 93px 15px;
     position: fixed;
     top: 0;
     left: 0;
@@ -75,7 +76,6 @@
     position: absolute;
     display: block;
     transform: translate(-50%,-50%);
-    margin: 93px 15px;
     top: 50%;
     left: 50%;
     background-color: $main-color;
@@ -128,10 +128,12 @@
 
 
 .form {
-    display: inline-block;
-    margin-left: 39px;
-    margin-right: 41px;
-    margin-top: 41px;
+    display: block;
+    // margin-left: 15px;
+    // margin-right: 15px;
+    margin-top: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .form__heading {
