--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -70,22 +70,25 @@
         opacity: 0;
         pointer-events: none;
     }
+    overflow-y: scroll;
 }
 
 .modal {
-    position: absolute;
-    display: block;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    background-color: $main-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    transform: translate(-50%, -50%) scale (1);
-    transition: transform $cubic-standard;
-    .backdrop.is-hidden & {
-        transform: translate(-50%, -50%) scale(1.5);
-    }
+    padding: 20px;
+    background-color: #fff;
+    // position: absolute;
+    // display: block;
+    // transform: translate(-50%,-50%);
+    // top: 50%;
+    // left: 50%;
+    // background-color: $main-color;
+    // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    // border-radius: 4px;
+    // transform: translate(-50%, -50%) scale (1);
+    // transition: transform $cubic-standard;
+    // .backdrop.is-hidden & {
+    //     transform: translate(-50%, -50%) scale(1.5);
+    // }
 }
 
 .modal__background {
