--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -74,8 +74,9 @@
 }
 
 .modal {
-    padding: 20px;
     background-color: #fff;
+    border-radius: 4px;
+
     // position: absolute;
     // display: block;
     // transform: translate(-50%,-50%);
@@ -83,7 +84,6 @@
     // left: 50%;
     // background-color: $main-color;
     // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    // border-radius: 4px;
     // transform: translate(-50%, -50%) scale (1);
     // transition: transform $cubic-standard;
     // .backdrop.is-hidden & {
@@ -134,13 +134,11 @@
     display: block;
     // margin-left: 15px;
     // margin-right: 15px;
-    margin-top: 40px;
-    margin-left: 40px;
-    margin-right: 40px;
+    padding: 40px;
 }
 
 .form__heading {
-    @include font-set ($font-weight: 700, $font-size: 20px, $line-height: 23px, $color: $main-text-color);
+    @include font-set ($font-weight: 700, $font-size: 20px, $line-height: 30px, $color: $main-text-color);
     margin-bottom: 12px;
 }
 
@@ -163,6 +161,10 @@
 
 .form__field input {
     @include font-set ($text-align: left, $letter-spacing: 0.01em, $color: $main-text-color);
+
+  
+
+
     border: 1px solid rgba(33, 33, 33, 0.2);
     width: 100%;
     border-radius: 4px;
@@ -231,12 +233,14 @@
 
 
 .field__gtc {
-    @include font-set ($line-height: 24px, $color: $secondary-text-color);
+    @include font-set ($color: $secondary-text-color);
+
+
     position: relative;
     display: flex;
     align-items: center;
     margin-bottom: 30px;
-    margin-left: 13px;
+    // margin-left: 13px;
 }
 
 .field__gtc--following {
