--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ header {
   padding: 0;
   border: none;
   background-color: transparent;
-  z-index: 999;
+  z-index: 9;
 }
 
 .navigation__menu-button .navigation__menu--close {
@@ -720,6 +720,7 @@ footer {
   fill: #000000;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
 }
 
 .modal__close--touching:hover, .modal__close--touching:focus {
@@ -1412,10 +1413,10 @@ footer {
   display: block;
   position: absolute;
   bottom: 0;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 77px;
-  padding-bottom: 77px;
+  height: 100%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
