--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -9,6 +9,13 @@
     & li:nth-child(5) {
         margin-right: 0px;
     }
+    @media screen and (min-width: 768px) {
+        margin-bottom: 30px;
+        & li {
+            margin-bottom: 0;
+        }
+        justify-content: center;
+    }
 }
 
 .selection__button {
@@ -34,6 +41,12 @@
 .projects {
     display: block;
     margin-bottom: -30px;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        // gap: 30px;
+    }
 }
 
 .projects__name {
@@ -49,6 +62,16 @@
     width: 100%;
     background-color: $main-color;
     margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+        width: 46%;
+        height: auto;
+        // &:last-child {
+        //     margin-bottom: 0;
+        // }
+        // flex-grow: 1;
+        margin-bottom: 0;
+        width: calc((100%-30px)/2);
+    }
 }
 
 .projects__container {
@@ -68,7 +91,6 @@
     border-bottom: 1px solid $border-color;
     border-left: 1px solid $border-color;
     border-right: 1px solid $border-color;
-
 }
 
 .projects__thumb {
@@ -78,17 +100,15 @@
  }
 
  .projects__description-text {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 24px;
+    padding-right: 24px;
     position: absolute;
     bottom: 0;
-    // padding-left: 24px;
-    // padding-right: 24px;
-    // padding-top: 77px;
-    // padding-bottom: 77px;
     height: 100%;
     align-self: center;
-    
-
     @include font-set ($font-size: 18px, $line-height: 28px, $text-align: left);    
     background: rgba(33, 150, 243, 0.9);
     margin-top: -1px;
@@ -96,6 +116,9 @@
     transition: transform $cubic-standard;
     .projects__container:hover & {
        transform: translateY(0);
+    }
+    @media screen and (min-width: 768px) {
+
     }
  }
 
