--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -29,3 +29,4 @@ $cubic-standard: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: $color;
     text-transform: $transform;
 }
+// @media screen and (min-width: 768px)
