--- a/sass/components/_index-clients.scss
+++ b/sass/components/_index-clients.scss
@@ -1,6 +1,3 @@
-// 450 - 
-// 210/450 - 46.66
-// 106/210 - 50.48
 .client {
     display: flex;
     justify-content: space-between;
@@ -12,6 +9,16 @@
     }
     & li:nth-last-of-type(-n+2) {
         margin-bottom: 0px;
+    }
+    @media screen and (min-width: 768px) {
+        margin-top: 30px;
+        & li {
+            width: 29.43%;
+            margin-bottom: 30px;
+        }
+        & li:nth-child(4) {
+            margin-bottom: 0;
+        }
     }
 }
 
