--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -14,6 +14,9 @@
     margin-right: auto;
     padding-top: 118px;
     padding-bottom: 118px;
+    @media screen and (min-width: 768px) {
+        max-width: 768px;
+    }
 }
 
 @media screen and (min-device-pixel-ratio: 2),
