--- a/sass/components/_index-team.scss
+++ b/sass/components/_index-team.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin-top: 30px;
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .team__background {
@@ -10,6 +14,9 @@
     margin-top: 30px;
     padding-top: 60px;
     padding-bottom: 60px;
+    @media screen and (min-width: 768px) {
+        margin-top: 0;
+    }
 }
 
 
@@ -23,9 +30,17 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    &:nth-child(4n) {
-        margin-right: 0;
-        margin-bottom: 0;
+    @media screen and (max-width: 767px) {
+        &:nth-child(4n) {
+            margin-right: 0;
+            margin-bottom: 0;
+        }
+    }
+    @media screen and (min-width: 768px) {
+        max-width: 354px;
+        &:nth-child(3), &:nth-child(4) {
+            margin-bottom: 0;
+        }
     }
 }
 
