--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -8,12 +8,21 @@ footer {
     flex-direction: column;
     padding-top: 60px;
     padding-bottom: 60px;
+    @media screen and (min-width: 768px) {
+        display: block;
+    }
 }
 
 .footer__address--mobile {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @media screen and (min-width: 768px) {
+        display: inline-flex;
+        margin-left: 60px;
+        margin-right: 165px;
+        // width: 300px;
+    }
 }
 
 .footer__logo--mobile {
@@ -33,6 +42,17 @@ footer {
     & li:nth-child(n+2) {
         padding-top: 9px;
         padding-top: 8px;
+    }
+    @media screen and (min-width: 768px) {
+
+        display: inline-flex;
+        & a {
+            display: inline-block;
+        }
+        & li {
+            display: inline-block;
+            width: auto;
+        }
     }
 }
 
@@ -65,6 +85,12 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @media screen and (min-width: 768px) {
+        display: inline-flex;
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: 0;
+    }
 }
 
 .footer-networks__heading {
@@ -122,7 +148,10 @@ footer {
     width: 100%;
     margin-top: 60px;
     margin-left: auto;
-    
+    @media screen and (min-width: 768px) {
+        margin-right: auto;
+        width: 450px;
+    }
 }
 
 .footer-form__container {
