--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,11 +12,13 @@ ul {
     display: block;
     width: 100%;
     max-width: 480px;
-
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    @media screen and (min-width: 768px) {
+        max-width: 768px;
+    }
 }
 
 .section {
@@ -38,4 +40,3 @@ ul {
 .section-header {
     @include font-set ($font-size: 28px, $font-weight: 700, $line-height: 33px, $color: $main-text-color);
 }
-
